[package]
name = "ksigner"
version = "0.1.0"
authors = ["evaitl <evaitl@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ed25519-dalek={version="^1.0.1", features = ["serde"]}
clap="^2.33.3"
serde_json="^1.0"
rand="^0.7.3"
